[tool.poetry]
name = "sloth-ci-ext-build-email-notifications"
version = "1.0.8"
description = "Email notifications for Sloth CI builds"
authors = ["Constantine Molchanov <moigagoo@live.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sloth_ci"}]

[tool.poetry.dependencies]
python = "^3.9"
sloth-ci = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
